--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,11 @@ body {
 a {
     text-decoration: none;
 }
+.flex-row{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
 
 
 /* global Classes  end*/
@@ -31,4 +36,13 @@ a {
     font-size: 1.6rem;
     padding: 1.6rem;
 
+}
+
+.nav .nav-menu{
+   justify-content: space-between; 
+}
+.nav .nav-items{
+    list-style-type: none;
+    display: flex;
+    margin: 0;
 }
