--- a/css/style.css
+++ b/css/style.css
@@ -11,10 +11,15 @@ body {
 a {
     text-decoration: none;
 }
-.flex-row{
+
+.flex-row {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+}
+
+ul {
+    list-style-type: none;
 }
 
 
@@ -32,17 +37,26 @@ a {
     overflow: hidden;
 }
 
-.nav .nav-brand a {
-    font-size: 1.6rem;
-    padding: 1.6rem;
-
+.nav .nav-menu {
+    justify-content: space-between;
 }
 
-.nav .nav-menu{
-   justify-content: space-between; 
-}
-.nav .nav-items{
-    list-style-type: none;
+.nav .nav-items {
     display: flex;
     margin: 0;
+}
+
+.nav .nav-items .nav-link {
+    padding: 1.6rem 1rem;
+    font-size: 1.1rem;
+    position: relative;
+}
+
+.nav .nav-brand a {
+    font-size: 1.6rem;
+    padding: 1rem 0;
+    display: block;
+}
+.nav .social{
+    padding: 1.4rem 0;
 }
