--- a/css/fonts.css
+++ b/css/fonts.css
@@ -21,10 +21,16 @@
     src:url('../Fonts/Josefin_Sans/static/JosefinSans-Regular.ttf')
 }
 
-/* font-family: Abel; */
+/* font-family: Lexend; */
 
+@font-face{
+    font-family: Lexend;
+    src:url('../Fonts/Lexend_Deca/static/LexendDeca-Regular.ttf')
+}
 
+/* font-family: Livvic; */
 
-
-
-/* font-family: Abel; */
+@font-face{
+    font-family: Livvic;
+    src:url('../Fonts/Livvic/Livvic-Regular.ttf')
+}
