--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@import url('../css/fonts.css');
 
 html,
 body {
@@ -7,10 +8,38 @@ body {
 }
 
 
+
+:root {
+
+
+    /* theme color */
+    --text-gray: #3f4954;
+    --text-light: #686666da;
+    --bg-color: #0f0f0f;
+    --white: #ffffff;
+    --midnight: #104f55;
+
+    /* gradient color */
+
+    --sky: linear-gradient(120deg, #a1c4fd 0%, #c2e9fb 100%);
+
+
+    /* theme font-family */
+
+    --Abel: 'Abel', cursive;
+    --Anton: 'Anton', cursive;
+    --Josefin: 'Josefin', cursive;
+    --Lexend: 'Lexend', cursive;
+    --Livvic: 'Livvic', cursive;
+
+}
+
+
 /* global Classes */
 
 a {
     text-decoration: none;
+    color: var(--text-gray);
 }
 
 .flex-row {
@@ -51,15 +80,31 @@ ul {
     padding: 1.6rem 1rem;
     font-size: 1.1rem;
     position: relative;
+    font-family: var(--Abel);
+    font-size: 1.1rem;
+}
+
+.nav-link:hover{
+    background-color: var(--midnight);
+}
+.nav-link:hover a{
+    color:var(--white);
 }
 
 .nav .nav-brand a {
     font-size: 1.6rem;
     padding: 1rem 0;
     display: block;
+    font-family: var(--Lexend);
+    font-size: 1.6rem;
 }
 
-.nav .social {
+.nav .social{
     padding: 1.4rem 0;
 }
-
+.nav .social i{
+    padding: 0.2rem;
+}
+.nav .social i:hover{
+    color: #a1c4cf;
+}
