responsive side menu fix

--- a/css/style.css
+++ b/css/style.css
@@ -71,6 +71,23 @@ ul {
     justify-content: space-between;
 }
 
+.nav .toggle-collapse{
+    position: absolute;
+    top: 0%;
+    width: 90%;
+    cursor: pointer;
+    display: none;
+}
+.nav .toggle-collapse .toggle-icons{
+    display: flex;
+    justify-content: flex-end;
+    padding: 1.7rem 0;
+}
+.nav .toggle-collapse .toggle-icons i{
+    font-size: 1.4rem;
+    color: var(--text-gray);
+}
+
 .nav .nav-items {
     display: flex;
     margin: 0;
@@ -82,6 +99,7 @@ ul {
     position: relative;
     font-family: var(--Abel);
     font-size: 1.1rem;
+
 }
 
 .nav-link:hover{
@@ -107,4 +125,23 @@ ul {
 }
 .nav .social i:hover{
     color: #a1c4cf;
+}
+
+
+
+
+
+
+
+
+
+/* Viewport less then of ecual to 750px */
+
+@media only screen and (max-width:750px){
+    .nav .nav-menu, .nav .nav-items{
+        flex-direction: column;
+    }
+    .nav .toggle-collapse{
+        display: initial;
+    }
 }
