--- a/css/style.css
+++ b/css/style.css
@@ -63,8 +63,9 @@ ul {
     background: #fff;
     padding: 0 2rem;
     height: 0rem;
-    min-height: 20vh;
+    min-height: 10vh;
     overflow: hidden;
+    transition: height 1s ease-in-out;
 }
 
 .nav .nav-menu {
@@ -88,6 +89,9 @@ ul {
     color: var(--text-gray);
 }
 
+.collapse{
+    height: 30rem;
+}
 .nav .nav-items {
     display: flex;
     margin: 0;
