--- a/css/style.css
+++ b/css/style.css
@@ -75,6 +75,9 @@ button.btn{
     font-family: var(--Livvic);
     cursor: pointer;
 }
+span{
+    font-size: var(--Abel);
+}
 /* global Classes  end*/
 
 
@@ -191,6 +194,29 @@ main .blog{
     background-position: right;
     height: 100vh;
     width: 100%;
+}
+main .blog .blog-post{
+    padding-top: 6rem;
+}
+main .blog-post .blog-content{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    width: 79%;
+    margin: 3rem 2rem;
+    box-shadow: 0 15px 20px rgba(0, 0, 0, 0.2);
+}
+main .blog-content .blog-title{
+    padding: 2rem 0;
+}
+main .blog-content .btn-blog{
+    padding: .7rem 2rem ;
+    background: var(--sky);
+    margin: .5rem;
+}
+
+.blog-content span{
+    display: block;
 }
 
 /* ------------Main-content End---------- */
