--- a/css/style.css
+++ b/css/style.css
@@ -84,6 +84,10 @@ span {
     margin: 0 5vw;
 }
 
+
+.text-gray{
+    color: var(--text-gray);
+}
 /* global Classes  end*/
 
 
@@ -275,7 +279,23 @@ main .site-content{
     display: grid;
     grid-template-columns: 70% 30%;
 }
+main .post-content{
+    width: 100%;
+    margin-bottom: 5rem;
+}
 
+main .site-content .post-content > .post-image, .post-title{
+    padding: 1rem 2rem;
+    position: relative;
+}
+main .post-info{
+    background: var(--sky);
+    padding: 1rem;
+    position: absolute;
+    bottom: 0%;
+    left: 17vw;
+    border-radius: 3rem;
+}
 /* ------------Main-content End---------- */
 
 
