--- a/css/style.css
+++ b/css/style.css
@@ -85,8 +85,13 @@ span {
 }
 
 
-.text-gray{
+.text-gray {
     color: var(--text-gray);
+}
+
+p{
+    font-family: var(--Lexend);
+    color: var(--text-light);
 }
 /* global Classes  end*/
 
@@ -275,27 +280,61 @@ section .container .owl-nav {
 
 /* site-content */
 
-main .site-content{
+main .site-content {
     display: grid;
     grid-template-columns: 70% 30%;
 }
-main .post-content{
+
+main .post-content {
     width: 100%;
     margin-bottom: 5rem;
 }
 
-main .site-content .post-content > .post-image, .post-title{
+main .site-content .post-content>.post-image,
+.post-title {
     padding: 1rem 2rem;
     position: relative;
 }
-main .post-info{
+
+main .post-info {
     background: var(--sky);
     padding: 1rem;
     position: absolute;
     bottom: 0%;
-    left: 17vw;
+    left: 20vw;
     border-radius: 3rem;
 }
+
+main .site-content .post-content> .post-image>div{
+    overflow: hidden;
+}
+main .site-content .post-content> .post-image .img{
+    width: 100%;
+    transition: all 1s ease;
+}
+
+main .site-content .post-content> .post-image .img:hover{
+    transform: scale(1.3);
+}
+
+main .post-info span{
+    margin: 0.5rem;
+}
+
+main .post-title a{
+    font-family: var(--Anton);
+    font-size: 1.5rem;
+}
+
+.post-btn {
+	border-radius: 0 !important;
+	padding: .7rem 1.5rem !important;
+	background: var(--sky);
+}
+
+
+
+
 /* ------------Main-content End---------- */
 
 
@@ -304,16 +343,3 @@ main .post-info{
 
 
 
-/* Viewport less then of ecual to 750px */
-
-@media only screen and (max-width:750px) {
-
-    .nav .nav-menu,
-    .nav .nav-items {
-        flex-direction: column;
-    }
-
-    .nav .toggle-collapse {
-        display: initial;
-    }
-}
