--- a/css/style.css
+++ b/css/style.css
@@ -383,6 +383,27 @@ main .post-title a{
     font-size: 1rem;
 }
 
+
+.newsletter{
+    padding-top: 3rem;
+}
+.form-element{
+    padding: .5rem 2rem;
+}
+.input-element{
+    width: 80%;
+    height: 1.9rem;
+    padding: .3rem .5rem;
+    font-size: var(--Lexend);
+    font-size: 1rem;
+}
+
+.form-btn {
+	border-radius: 0 !important;
+	padding: 0.8rem 33% !important;
+	margin: 1rem 0 !important;
+	background: var(--sky) !important;
+}
 /* ------------Main-content End---------- */
 
 
