--- a/css/style.css
+++ b/css/style.css
@@ -451,4 +451,8 @@ footer.footer .container>div{
     flex-basis: 0;
     padding: 3rem .9rem;
 }
+
+.about-us h2{
+    color: var(--white);
+}
     
