--- a/css/responsive.css
+++ b/css/responsive.css
@@ -10,9 +10,11 @@
     .nav .toggle-collapse {
         display: initial;
     }
+
     .site-content {
         grid-template-columns: 100% !important;
     }
+
     footer.footer .container {
         grid-template-columns: repeat(1, 1fr) !important;
     }
@@ -29,8 +31,27 @@
     .post-infos {
         display: none;
     }
-    footer.footer .container{
+
+    footer.footer .container {
         grid-template-columns: repeat(2, 1fr);
+    }
+
+}
+
+@media only screen and (max-width:520px) {
+    .blog{
+        height: 125vh;
+    }
+
+    .post-info{
+        display: none;
+    }
+    footer.footer .container>div{
+        padding: 1rem .9rem !important;
+    }
+    .rights{
+        padding: 0 1.4rem;
+        text-align: center;
     }
 
 }
